Added power-led-controller to update power LED based on post codes
Power-led-controller has a match for postcodes and host power changes
and calls a handler when a property is
changed. power-led.cpp contains the necessary functions to update LED
groups upon reaching a certain postcode. Specifically, the
MB1 Start boot progress code will assert the post_active LED group,
which will then cause the power LED to blink at 4Hz. Once
Exit Boot Services (another postcode) is observed, then
the post_active group will de-assert and the powered_on group
will assert. This causes the power LED to stay solid on. If the
host power state changes, then the LED will update accordingly. This
means that these boot progress codes will need to be reached again for
the LED to enter these states again (blink at 4Hz, solid on).

Signed-off-by: Brooks Keough <bkeough@nvidia.com>

Fixes jira https://jirasw.nvidia.com/browse/DGXOPENBMC-3918
Fixes jira https://jirasw.nvidia.com/browse/DGXOPENBMC-5405
Fixes jira https://jirasw.nvidia.com/browse/DGXOPENBMC-5638

--- a/meson.build
+++ b/meson.build
@@ -82,6 +82,7 @@ deps = [
 
 subdir('manager')
 subdir('fault-monitor')
+subdir('power-led')
 
 configure_file(output: 'config.h',
     configuration: conf_data
